[package]
name = "lambda-instance-beholder"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
dotenv = "0.15"
env_logger = "0.9"
hyper = "0.14"
log = "0.4"
reqwest = { version = "0.11", features = ["blocking", "cookies", "json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rodio = "0.15"
